[gd_scene load_steps=3 format=3 uid="uid://c6pfxs37rwloc"]

[ext_resource type="Script" uid="uid://clawdpv2sloom" path="res://scripts/world/hurry_up.gd" id="1_ilwci"]
[ext_resource type="Script" uid="uid://hoyafyq16s0c" path="res://scripts/falling_unbreakable_spawner.gd" id="2_ilwci"]

[node name="HurryUp" type="TileMapLayer" groups=["bombstop", "thrown_bomb_bounces", "thrown_pickup_bounces"]]
script = ExtResource("1_ilwci")

[node name="Timers" type="Node" parent="."]

[node name="HurryUpStartTimer" type="Timer" parent="Timers"]
wait_time = 60.0
one_shot = true

[node name="HurryUpStepTimer" type="Timer" parent="Timers"]

[node name="FallingUnbreakableHolder" type="Node2D" parent="."]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="FallingUnbreakableHolder"]
spawn_path = NodePath("..")
script = ExtResource("2_ilwci")

[connection signal="timeout" from="Timers/HurryUpStartTimer" to="." method="_on_hurry_up_start_timer_timeout"]
[connection signal="timeout" from="Timers/HurryUpStepTimer" to="." method="_on_hurry_up_step_timer_timeout"]
